--- a/collections/_xylosuite/2019-12-22-intro.md
+++ b/collections/_xylosuite/2019-12-22-intro.md
@@ -5,7 +5,7 @@ level: 0
 date: 2019-12-01 16:34:53 +0100
 thumb: /img/xylosuite.png
 description: "Logiciel d'exploitation forestière, applications pour l'approvisionnement en bois"
-illustration1: /img/XLS_flux_matiere.png
+illustration1: /img/XLS_processus_2.png
 illustration_applis: /img/techno-carto_applis.png
 illustration2: /img/techno-processus.png
 illustration3: /img/techno-no_network.svg
@@ -62,7 +62,7 @@ subtitle: XyloSuite | logiciels d'exploitation forestière et d'approvisionnemen
   </div>
 </div>
 <p class="d-flex justify-content-around flex-wrap mt-3" >
-  <img src="{{page.illustration1}}" alt="métiers couverts par Xylosuite" class="img-fluid" style="max-height: 300px" >
+  <img src="{{page.illustration1}}" alt="métiers couverts par Xylosuite" class="img-fluid" style="max-height: 400px" >
 </p>
 
 ## Une suite applicative innovante
